--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -37,18 +37,18 @@
       <div
         class="flex flex-col sm:flex-row justify-between gap-2 align-middle items-center my-1"
       >
-        {% call button("https://linkedin.com/in/patilsr", "w-32 bg-[#0077b5] text-white") %}
+        {% call button("https://linkedin.com/in/alexiybuynitsky", "w-32 bg-[#0077b5] text-white") %}
           <div style="mask-image: url('/assets/linkedin.svg');" class="icon"></div>
           <span class="ms-1">LinkedIn</span>
         {% endcall %}
         {%
           call
-          button("https://github.com/sagarreddypatil", "w-32")
+          button("https://github.com/abuynits", "w-32")
         %}
           <div style="mask-image: url('/assets/github.svg');" class="icon"></div>
           <span class="ms-1">GitHub</span>
         {% endcall %}
-        {% call button("/assets/resume.pdf", "w-32") %}
+        {% call button("/assets/alexiy_buynitsky_resume.pdf", "w-32") %}
           <span class="ms-1">Resume</span>
         {% endcall %}
       </div>
@@ -63,6 +63,7 @@
           <a href="https://github.com/sagarreddypatil/portfolio-website">
             GitHub
           </a>
+           thanks to  <a href="https://sagarpatil.me/">Sagar Patil</a> 
         </span>
       </div>
     {% endcall %}
