--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,7 @@
     {% call fieldset("whoami") %}
       <div class="flex flex-col gap-3 text-lg">
         <p>
-          Hey!! I'm Alexiy, a Junior at Purdue majoring in CS and Math, 
+          Hey!! I'm Alexiy, a 3rd year at Purdue pursuing a Master's in CS while completing my Bachelor's as a double major in CS and Math at Purdue
           with an unbreakable caffeine addiction (even full-timers at SpaceX were concerned...).
           <br>
           <br>
@@ -85,8 +85,10 @@
           </span>
       </p>
      <ul>
-          <li>Develop natural language robot control methods using CV and LLMs</li>
-          <li>Generate synthetic datasets and finetune LLMs through SFT, DPO, PEFT, FSDP</li>
+      <li>First Intern at Armada AI building Edge AI Applications for remote compute hardware</li>
+      <li>Developing spatially aware CV and LLM robotic control methods by generating synthetic data and finetuning models using SFT and DPO</li>
+      <li>Building VideoQA assistant for realtime video Q\&A for security camera footage</li>
+      <li>Build prompting library with support for customizable prompting formats, single / multi-shot prompting from variable datasets, open/closed source LLMs / custom checkpoint</li>
       </ul>
 
       <p style="text-align:left;font-weight:bold">
@@ -96,8 +98,10 @@
         </span>
       </p>
      <ul>
-          <li>Conducting research on robotic learning under the supervision of Professor Ahmed Qureshi</li>
-          <li>Teaching quadruped robots to navigate outdoors through LLMs, SDFs, RAG and vector databases</li>
+      <li>Conducting research on robotic learning under the supervision of Professor Ahmed Qureshi</li>
+      <li>Researching Motion Planning in dynamic environments via Active NT Fields and Sign Distance Fields</li>
+      <li>Extended Unitree simulator to support Unitree B1 Quadruped Robot in Gazebo and PyBullet</li>
+      <li>Teaching robots to navigate through Purdue with custom knowledge using LLMs, RAG, and vector databases</li>
       </ul>
 
       <p style="text-align:left;font-weight:bold">
@@ -109,8 +113,7 @@
      <ul>
           <li>Develop robotic solutions for quicker manufacturing and assembly of Starlink satellites</li>
           <li>Prototype satellite assembly cells, working with 6-axis robotics arms, CV, actuators, sensors, & safety hardware</li>
-          <li>Achieve 80x speedup between PLC & CV software by developing an IP-style communication library</li>
-          <li>Create automation scripts using Python, TypeScript, C/Cpp, and C# / .Net, saving >$200k on one instance</li>
+          <li>Achieve 80x speedup between PLC & CV software by developing a TCP-style communication library</li>
       </ul>
       <p style="text-align:left;font-weight:bold">
         TensorFlow Model Developer <span>&#64;</span> <a href="https://github.com/PurdueDualityLab/tf-maskformer"> <b>Google x Duality Lab</b></a>
