--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -70,7 +70,7 @@
         <h4>Favorite Books</h4>
         <ul>
           <li>The Martian by Andy Weir</li>
-          <li>Project Hail Mary by Andy Weir</li>
+          <li>Algebra, Topology, Differential Calculus, and Optimization Theory for CS & ML by Gallier & Quaintance</li>
         </ul>
       </article>
     {% endcall %}
@@ -87,7 +87,7 @@
      <ul>
       <li>First Intern at Armada AI building Edge AI Applications for remote compute hardware</li>
       <li>Developing spatially aware CV and LLM robotic control methods by generating synthetic data and finetuning models using SFT and DPO</li>
-      <li>Building VideoQA assistant for realtime video Q\&A for security camera footage</li>
+      <li>Building VideoQA assistant for realtime video Q&A for security camera footage</li>
       <li>Build prompting library with support for customizable prompting formats, single / multi-shot prompting from variable datasets, open/closed source LLMs / custom checkpoint</li>
       </ul>
 
