feat: updated courses fall 2025

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -69,7 +69,7 @@
         </ul>
         <h4>Favorite Books</h4>
         <ul>
-          <li>The Martian by Andy Weir</li>
+          <li>The Martian & Project Hail Mary by Andy Weir</li>
           <li>Algebra, Topology, Differential Calculus, and Optimization Theory for CS & ML by Gallier & Quaintance</li>
         </ul>
       </article>
@@ -192,6 +192,13 @@
     <!-- <Coursework /> -->
     {% call fieldset("~/courses.md") %}
       <article>
+        <h4>Fall 2024 @ Purdue</h4>
+        <ul>
+          <li>CS 57300 - Machine Leaning & Data Mining</li>
+          <li>MA 42500 - Complex Analysis</li>
+          <li>CS 47100 - Artificial Intelligence</li>
+          <li>MA 41600 - Probability</li>
+        </ul>
         <h4>Spring 2024 @ Purdue</h4>
         <ul>
           <li>CS 55800 - Robotic Learning</li>
