feat: new bakery unlocked

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -53,6 +53,7 @@
         <h4>Favorite Coffee Shops</h4>
         <ul>
           <li> Mount Currie Coffee Co in Whistler B.C.</li>
+          <li>Schat's Bakery in Mammoth Lakes</li>
           <li>Philz Coffee in Sunnyvale</li>
         </ul>
         <h4>Favorite Hikes</h4>
