feat: updated courses v2

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -49,6 +49,8 @@
           <li>"If you are not in pain, you are not learning.", "FAFO",  "FIFI" - ppl @ SpaceX</li>
           <li> "Oooooh yea I don't like this problem. It came off a graduate qualifying exam. I put it on there just to torment people, even I don't know how to do it" - MA 453 Prof</li>
           <li>"[Insert Algo Question]. Provide a brief but precise explanation" - CS 251/381 exams</li>
+          <li>"[Discussing logs of complex #s]... Unfortunately 0 is still F***ed. I don't know how to take log of 0" - MA 425 prof</li>
+          <li>"Next friday you are gonna be tired after midterm so we gonna do some goofing [goofing = deriving RSA]. Enjoy your weekend but not too much." - CS 182 prof</li>
         </ul>
         <h4>Favorite Coffee Shops</h4>
         <ul>
@@ -159,17 +161,14 @@
       <article>
         <h4>MS in CS @ Purdue</h4>
         <ul>
-          <li>GPA: 4.00</li>
           <li>Fall 2024 - Spring 2026</li>
         </ul>
         <h4>BS in CS, BS in Math @ Purdue</h4>
         <ul>
-          <li>GPA: 4.00</li>
           <li>Fall 2022 - Spring 2025</li>
         </ul>
         <h4>Dual Enrolling HS Student @ De Anza College </h4>
         <ul>
-          <li>GPA: 4.00</li>
           <li>Fall 2021 - Spring 2022 </li>
         </ul>
       </article>
@@ -195,6 +194,7 @@
       <article>
         <h4>Fall 2024 @ Purdue</h4>
         <ul>
+          <li>CS 59200MP - Robot Manipulation</li>
           <li>CS 57300 - Machine Leaning & Data Mining</li>
           <li>MA 42500 - Complex Analysis</li>
           <li>CS 47100 - Artificial Intelligence</li>
