feat: modified code

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -49,7 +49,7 @@
           <li>"If you are not in pain, you are not learning.", "FAFO",  "FIFI" - ppl @ SpaceX</li>
           <li> "Oooooh yea I don't like this problem. It came off a graduate qualifying exam. I put it on there just to torment people, even I don't know how to do it" - MA 453 Prof</li>
           <li>"[Insert Algo Question]. Provide a brief but precise explanation" - CS 251/381 exams</li>
-          <li>"[Discussing logs of complex #s]... Unfortunately 0 is still F***ed. I don't know how to take log of 0" - MA 425 prof</li>
+          <li>"[Discussing logs of complex #s]... Unfortunately zero is still F***ed. I don't know how to take log of zero" - MA 425 prof</li>
           <li>"Next friday you are gonna be tired after midterm so we gonna do some goofing [goofing = deriving RSA]. Enjoy your weekend but not too much." - CS 182 prof</li>
         </ul>
         <h4>Favorite Coffee Shops</h4>
