feat: added ppl, updated resume

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -177,7 +177,7 @@
       <article>
         Cool friends working on cool stuff
         <ul>
-          <li><a href="https://arefmalek.com/">Aref Malek</a></li>
+          <li><a href="https://arefmalek.com/">Aref Malek </a></li>
           <li><a href="https://sagarpatil.me/">Sagar Patil </a> (shoutout for this website template) </li>
           <li><a href="https://coleroberts.dev/index">Cole Roberts</a></li>
           <li><a href="https://harmya.me/">Harmya Bhatt</a></li>
@@ -186,6 +186,7 @@
           <li><a href="https://jinen.setpal.net/">Jinen Setpal</a></li>
           <li><a href="https://mikail-khan.com/">Mikail Khan</a></li>
           <li><a href="https://wade.dev/">Nicholas Wade</a></li>
+          <li><a href="https://ilksh.github.io/">Aaron Kim</a></li>
         </ul>
       </article>
     {% endcall %}
