feat: added presentation section

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -157,6 +157,17 @@
       {{ lists["projects"]|safe }}
     {% endcall %}
     <!-- <Education/> -->
+    {% call fieldset("~/presentations.md") %}
+      <article>
+        <ul>
+          <li>[Nov 2024]: <a href="https://github.com/Abuynits/presentations/blob/main/diffusion-policy/main.pdf">Diffusion Policy + BET + IRL</a></li>
+          <li>[Oct 2024]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_rl.pdf">Intro To RL + VPG Derivation</a></li>
+          <li>[Sept 2024]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_graphs.pdf">Intro to GNNs + Graphormer + Body Transformer</a></li>
+          <li>[Jan 2024]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_transformers.pdf">Transformers</a> (modified from <a href="https://www.youtube.com/watch?v=bCz4OMemCcAf">here</a>)</li>
+          <li>[May 2023]: <a href="https://github.com/Abuynits/presentations/blob/main/TE_connectivity.pdf">TE Connectivity: TFT, LSTM, seq2seq</a></li>
+        </ul>
+      </article>
+    {% endcall %}
     {% call fieldset("~/education.md") %}
       <article>
         <h4>MS in CS @ Purdue</h4>
