--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -160,11 +160,11 @@
     {% call fieldset("~/presentations.md") %}
       <article>
         <ul>
-          <li>[Nov 2024]: <a href="https://github.com/Abuynits/presentations/blob/main/diffusion-policy/main.pdf">Diffusion Policy + BET + IRL</a></li>
-          <li>[Oct 2024]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_rl.pdf">Intro To RL + VPG Derivation</a></li>
-          <li>[Sept 2024]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_graphs.pdf">Intro to GNNs + Graphormer + Body Transformer</a></li>
-          <li>[Jan 2024]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_transformers.pdf">Transformers</a> (modified from <a href="https://www.youtube.com/watch?v=bCz4OMemCcAf">here</a>)</li>
-          <li>[May 2023]: <a href="https://github.com/Abuynits/presentations/blob/main/TE_connectivity.pdf">TE Connectivity: TFT, LSTM, seq2seq</a></li>
+          <li>[11/24]: <a href="https://github.com/Abuynits/presentations/blob/main/diffusion-policy/main.pdf">Diffusion Policy + BET + IRL</a></li>
+          <li>[10/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_rl.pdf">Intro To RL + VPG Derivation</a></li>
+          <li>[09/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_graphs.pdf">Intro to GNNs + Graphormer + Body Transformer</a></li>
+          <li>[01/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_transformers.pdf">Transformers</a> (modified from <a href="https://www.youtube.com/watch?v=bCz4OMemCcAf">here</a>)</li>
+          <li>[05/23]: <a href="https://github.com/Abuynits/presentations/blob/main/TE_connectivity.pdf">TE Connectivity: TFT, LSTM, seq2seq</a></li>
         </ul>
       </article>
     {% endcall %}
@@ -206,7 +206,7 @@
       <article>
         <h4>Fall 2024 @ Purdue</h4>
         <ul>
-          <li>CS 59200MP - Robot Manipulation</li>
+          <li>CS 59200RM - Robot Manipulation</li>
           <li>CS 57300 - Machine Leaning & Data Mining</li>
           <li>MA 42500 - Complex Analysis</li>
           <li>CS 47100 - Artificial Intelligence</li>
