feat: added prompting presentation

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -164,6 +164,7 @@
           <li>[10/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_rl.pdf">Intro To RL + VPG Derivation</a></li>
           <li>[09/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_graphs.pdf">Intro to GNNs + Graphormer + Body Transformer</a></li>
           <li>[01/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_transformers.pdf">Transformers</a> (modified from <a href="https://www.youtube.com/watch?v=bCz4OMemCcAf">here</a>)</li>
+          <li>[09/24]: <a href="https://github.com/Abuynits/presentations/blob/main/prompting.pdf">LLMs + Prompting</a></li>
           <li>[05/23]: <a href="https://github.com/Abuynits/presentations/blob/main/TE_connectivity.pdf">TE Connectivity: TFT, LSTM, seq2seq</a></li>
         </ul>
       </article>
