--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -51,6 +51,7 @@
           <li>"[Insert Algo Question]. Provide a brief but precise explanation" - CS 251/381 exams</li>
           <li>"[Discussing logs of complex #s]... Unfortunately zero is still F***ed. I don't know how to take log of zero" - MA 425 prof</li>
           <li>"Next friday you are gonna be tired after midterm so we gonna do some goofing [goofing = deriving RSA]. Enjoy your weekend but not too much." - CS 182 prof</li>
+          <li>"Who needs drugs when you have Engineering" - Stuff Made Here</li>
         </ul>
         <h4>Favorite Coffee Shops</h4>
         <ul>
