--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -161,6 +161,8 @@
     {% call fieldset("~/presentations.md") %}
       <article>
         <ul>
+          <!-- https://github.com/Abuynits/presentations/tree/main/active_vision-->
+          <!--<li>[12/24]: <a href="https://github.com/Abuynits/presentations/blob/main/active_vision/main.pdf">Active Vision / Sensing, MpiNets, PerAct, Manipulate anything</a></li>-->
           <li>[11/24]: <a href="https://github.com/Abuynits/presentations/blob/main/diffusion-policy/main.pdf">Diffusion Policy + BET + IRL</a></li>
           <li>[10/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_rl.pdf">Intro To RL + VPG Derivation</a></li>
           <li>[09/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_graphs.pdf">Intro to GNNs + Graphormer + Body Transformer</a></li>
@@ -238,7 +240,7 @@
         <ul>
           <li>MA 35100 - Elementary Linear Algebra</li>
           <li>STAT 35000 - Statistics</li>
-          <li>MA 18000 - Object-Oriented Programming</li>
+          <li>CS 18000 - Object-Oriented Programming</li>
         </ul>
         <h4>Winter 2022 @ De Anza </h4>
         <ul>
