chore: spr 2025 update

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -47,11 +47,11 @@
         <h4>Favorite Quotes</h4>
         <ul>
           <li>"If you are not in pain, you are not learning.", "FAFO",  "FIFI" - ppl @ SpaceX</li>
-          <li> "Oooooh yea I don't like this problem. It came off a graduate qualifying exam. I put it on there just to torment people, even I don't know how to do it" - MA 453 Prof</li>
-          <li>"[Insert Algo Question]. Provide a brief but precise explanation" - CS 251/381 exams</li>
-          <li>"[Discussing logs of complex #s]... Unfortunately zero is still F***ed. I don't know how to take log of zero" - MA 425 prof</li>
-          <li>"Next friday you are gonna be tired after midterm so we gonna do some goofing [goofing = deriving RSA]. Enjoy your weekend but not too much." - CS 182 prof</li>
           <li>"Who needs drugs when you have Engineering" - Stuff Made Here</li>
+          <li>"[Insert Algo Question]. Provide a brief but precise explanation" - CS 251/381 exams</li>
+          <li> "Oooooh yea I don't like this problem. It came off a graduate qualifying exam. I put it on there just to torment people, even I don't know how to do it" - MA 453 Prof</li>
+          <!-- <li>"[Discussing logs of complex #s]... Unfortunately zero is still F***ed. I don't know how to take log of zero" - MA 425 prof</li> -->
+          <li>"Next friday you are gonna be tired after midterm so we gonna do some goofing [goofing = deriving RSA]. Enjoy your weekend but not too much." - CS 182 prof</li>
         </ul>
         <h4>Favorite Coffee Shops</h4>
         <ul>
@@ -163,6 +163,8 @@
         <ul>
           <!-- https://github.com/Abuynits/presentations/tree/main/active_vision-->
           <!--<li>[12/24]: <a href="https://github.com/Abuynits/presentations/blob/main/active_vision/main.pdf">Active Vision / Sensing, MpiNets, PerAct, Manipulate anything</a></li>-->
+          <li>[TBD]: <a href="https://github.com/Abuynits/presentations/blob/main/nvidia_cosmos/main.pdf">COSMOS</a></li>
+          <li>[TBD]: <a href="https://github.com/Abuynits/presentations/blob/main/rope/main.pdf">RoPE</a></li>
           <li>[11/24]: <a href="https://github.com/Abuynits/presentations/blob/main/diffusion-policy/main.pdf">Diffusion Policy + BET + IRL</a></li>
           <li>[10/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_rl.pdf">Intro To RL + VPG Derivation</a></li>
           <li>[09/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_graphs.pdf">Intro to GNNs + Graphormer + Body Transformer</a></li>
@@ -208,6 +210,11 @@
     <!-- <Coursework /> -->
     {% call fieldset("~/courses.md") %}
       <article>
+        <h4>Spring 2025 @ Purdue</h4>
+        <ul>
+          <li>CS 58700 - Deep Learning</li>
+          <li>CS 50200 - Compilers</li>
+        </ul>
         <h4>Fall 2024 @ Purdue</h4>
         <ul>
           <li>CS 59200RM - Robot Manipulation</li>
