feat:added dates

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -163,8 +163,8 @@
         <ul>
           <!-- https://github.com/Abuynits/presentations/tree/main/active_vision-->
           <!--<li>[12/24]: <a href="https://github.com/Abuynits/presentations/blob/main/active_vision/main.pdf">Active Vision / Sensing, MpiNets, PerAct, Manipulate anything</a></li>-->
-          <li>[TBD]: <a href="https://github.com/Abuynits/presentations/blob/main/nvidia_cosmos/main.pdf">COSMOS</a></li>
-          <li>[TBD]: <a href="https://github.com/Abuynits/presentations/blob/main/rope/main.pdf">RoPE</a></li>
+          <li>[02/25]: <a href="https://github.com/Abuynits/presentations/blob/main/nvidia_cosmos/main.pdf">COSMOS</a></li>
+          <li>[01/25]: <a href="https://github.com/Abuynits/presentations/blob/main/rope/main.pdf">RoPE</a></li>
           <li>[11/24]: <a href="https://github.com/Abuynits/presentations/blob/main/diffusion-policy/main.pdf">Diffusion Policy + BET + IRL</a></li>
           <li>[10/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_rl.pdf">Intro To RL + VPG Derivation</a></li>
           <li>[09/24]: <a href="https://github.com/Abuynits/presentations/blob/main/mlp_graphs.pdf">Intro to GNNs + Graphormer + Body Transformer</a></li>
