--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -52,6 +52,11 @@
           <li> "Oooooh yea I don't like this problem. It came off a graduate qualifying exam. I put it on there just to torment people, even I don't know how to do it" - MA 453 Prof</li>
           <!-- <li>"[Discussing logs of complex #s]... Unfortunately zero is still F***ed. I don't know how to take log of zero" - MA 425 prof</li> -->
           <li>"Next friday you are gonna be tired after midterm so we gonna do some goofing [goofing = deriving RSA]. Enjoy your weekend but not too much." - CS 182 prof</li>
+          <li>"Yea I remember this [hw problem] wasn't solvable lat " - </li>
+          <!-- <li>"What order will you get the nodes in from an inorder traversal? Yes I added this question to troll kids" - CS251 Head TA</li> -->
+          <li>"[Talking about CS251 exam question] Yes I added this question to troll kids" - CS251 Head TA</li>
+          <li>"Yea I remember this [problem] wasn't solvable last time I took the course" - CS 587 TA</li>
+
         </ul>
         <h4>Favorite Coffee Shops</h4>
         <ul>
@@ -163,8 +168,8 @@
         <ul>
           <!-- https://github.com/Abuynits/presentations/tree/main/active_vision-->
            
-          <li>[02/25]: <a href="https://github.com/Abuynits/presentations/blob/main/rt1_rt2_openvla/main.pdf">VLAs (RT1, RT2, OpenVLA, Aloha)</a></li>
-          <li>[01/25]: <a href="https://github.com/Abuynits/presentations/blob/main/nvidia_cosmos/main.pdf">Nvidia COSMOS</a></li>
+          <li>[TBD]: <a href="https://github.com/Abuynits/presentations/blob/main/rt1_rt2_openvla/main.pdf">VLAs (RT1, RT2, OpenVLA, Aloha)</a></li>
+          <li>[02/25]: <a href="https://github.com/Abuynits/presentations/blob/main/nvidia_cosmos/main.pdf">Nvidia COSMOS</a></li>
           <li>[01/25]: <a href="https://github.com/Abuynits/presentations/blob/main/rope/main.pdf">RoPE</a></li>
           <li>[12/24]: <a href="https://github.com/Abuynits/presentations/blob/main/active_vision/main.pdf">Active Vision / Sensing, (MpiNets, PerAct, Manipulate Anything)</a></li>
           <li>[11/24]: <a href="https://github.com/Abuynits/presentations/blob/main/diffusion-policy/main.pdf">Diffusion Policy + BET + IRL</a></li>
