--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -54,7 +54,7 @@
           <li>"Next friday you are gonna be tired after midterm so we gonna do some goofing [goofing = deriving RSA]. Enjoy your weekend but not too much." - CS 182 prof</li>
           <li>"Yea I remember this [hw problem] wasn't solvable lat " - </li>
           <!-- <li>"What order will you get the nodes in from an inorder traversal? Yes I added this question to troll kids" - CS251 Head TA</li> -->
-          <li>"[Talking about CS251 exam question] Yes I added this question to troll kids" - CS251 Head TA</li>
+          <li>"[Talking about CS251 exam] Yes, I added this question to troll kids" - CS251 Head TA</li>
           <li>"Yea I remember this [problem] wasn't solvable last time I took the course" - CS 587 TA</li>
 
         </ul>
