chore: minor typos

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -246,7 +246,7 @@
         <h4>Spring 2023 @ Purdue</h4>
         <ul>
           <li>MA 34100 - Real Analysis</li>
-          <li>MA 35301 - Lenear Algebra II</li>
+          <li>MA 35301 - Linear Algebra II</li>
           <li>CS 18200 - Discrete Math</li>
           <li>CS 24000 - C Programming</li>
         </ul>
