feat: added final proj, updated contancts

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,9 @@
     {% call fieldset("whoami") %}
       <div class="flex flex-col gap-3 text-lg">
         <p>
-          Hey!! I'm Alexiy, a 3rd year at Purdue pursuing a Master's in CS while completing my Bachelor's as a double major in CS and Math at Purdue
+          <!-- Hey!! I'm Alexiy, a 3rd year at Purdue pursuing a Master's in CS while completing my Bachelor's as a double major in CS and Math at Purdue
+          with an unbreakable caffeine addiction (even full-timers at SpaceX were concerned...). -->
+          Hey!! I'm Alexiy, an incoming MS student in CSE at UCSD (Graduted from Purdue graduating with a BS in Math and CS May '25!)
           with an unbreakable caffeine addiction (even full-timers at SpaceX were concerned...).
           <br>
           <br>
@@ -18,6 +20,9 @@
           <br>
 
           In my free time, I love hiking / mountain biking / skiing, and finding excuses to visit coffee shops.
+          <br>
+          <br>
+          Feel free to reach out!!
         </p>
         <script>
           const bday = new Date("2003-10-22");
