--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -41,6 +41,12 @@
           <div style="mask-image: url('/assets/linkedin.svg');" class="icon"></div>
           <span class="ms-1">LinkedIn</span>
         {% endcall %}
+
+        {% 
+          call button("https://x.com/ABuynitsky", "w-32 bg-[#FFFFFF] text-black") %}
+          <div style="mask-image: url('/assets/x.svg');" class="icon"></div>
+          <span class="ms-1"></span>
+        {% endcall %}
         {%
           call
           button("https://github.com/abuynits", "w-32")
