chore: typo lol

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,7 @@
         <p>
           <!-- Hey!! I'm Alexiy, a 3rd year at Purdue pursuing a Master's in CS while completing my Bachelor's as a double major in CS and Math at Purdue
           with an unbreakable caffeine addiction (even full-timers at SpaceX were concerned...). -->
-          Hey!! I'm Alexiy, an incoming MS student in CSE at UCSD (Graduted from Purdue graduating with a BS in Math and CS May '25!)
+          Hey!! I'm Alexiy, an incoming MS student in CSE at UCSD (Graduted from Purdue with a BS in CS and Math May '25!)
           with an unbreakable caffeine addiction (even full-timers at SpaceX were concerned...).
           <br>
           <br>
