--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,8 +7,6 @@
     {% call fieldset("whoami") %}
       <div class="flex flex-col gap-3 text-lg">
         <p>
-          <!-- Hey!! I'm Alexiy, a 3rd year at Purdue pursuing a Master's in CS while completing my Bachelor's as a double major in CS and Math at Purdue
-          with an unbreakable caffeine addiction (even full-timers at SpaceX were concerned...). -->
           Hey!! I'm Alexiy, an incoming MS student in CSE at UCSD (Graduted from
           Purdue with a BS in CS and Math May '25!) with an unbreakable caffeine
           addiction (even full-timers at SpaceX were concerned...).
@@ -76,6 +74,9 @@
           <li>
             "Oh right I remember now. This problem wasn't solvable last time I
             took the course" - CS 587 TA
+          </li>
+          <li>
+            "We are very close to a working Diffusion Policy or insanity, one way or another." - ML Lead @ Persona
           </li>
         </ul>
         <h4>Favorite Coffee Shops</h4>
@@ -419,10 +420,6 @@
         <h4>MS in CSE @ UCSD</h4>
         <ul>
           <li>Fall 2025 - Spring 2027</li>
-        </ul>
-        <h4>YCombinator Startup School</h4>
-        <ul>
-          <li>June 2025</li>
         </ul>
         <h4>BS in CS, BS in Math @ Purdue</h4>
         <ul>
