--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -78,6 +78,10 @@
           <li>
             "We are very close to a working Diffusion Policy or insanity, one way or another." - ML Lead @ Persona
           </li>
+          <li>
+            "Robot bringup 'valley of despair' can last 2 weeks to 6 months. Hopefully its on the shorter side. Robots are ***holes." - CTO @ Persona
+          </li>
+
         </ul>
         <h4>Favorite Coffee Shops</h4>
         <ul>
