chore: updated quotes

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -76,10 +76,8 @@
             took the course" - CS 587 TA
           </li>
           <li>
-            "We are very close to a working Diffusion Policy or insanity, one way or another." - ML Lead @ Persona
-          </li>
-          <li>
-            "Robot bringup 'valley of despair' can last 2 weeks to 6 months. Hopefully its on the shorter side. Robots are ***holes." - CTO @ Persona
+            "We are very close to a working Diffusion Policy or insanity, one way or another.",
+            "Robot bringup 'valley of despair' can last 2 weeks to 6 months. Hopefully its on the shorter side. Robots are ***holes." - ppl @ Persona
           </li>
 
         </ul>
