--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,7 @@
     {% call fieldset("whoami") %}
       <div class="flex flex-col gap-3 text-lg">
         <p>
-          Hey!! I'm Alexiy, a MS student majoring in CSE at UCSD (Graduted from
+          Hey!! I'm Alexiy, a CS Master's student at UCSD (Graduted from
           Purdue with a BS in CS & Math May '25!) with an unbreakable caffeine
           addiction (even full-timers at SpaceX were concerned...).
           <br />
@@ -426,7 +426,7 @@
     {% endcall %}
     {% call fieldset("~/education.md") %}
       <article>
-        <h4>MS in CSE @ UCSD</h4>
+        <h4>MS in CS @ UCSD</h4>
         <ul>
           <li>Fall 2025 - Spring 2027</li>
         </ul>
